criando a activity_formulario usando o ConstraintLayout e TextInputLayout,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">AndroidBrasil</string>
+    <string name="app_name">Android Brasil</string>
+    <string name="dados_pessoais">Dados Pessoais</string>
+    <string name="botao_cadastrar">Cadastrar</string>
 </resources>
